<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/user_1" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/hi_alex"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/discover_your_ndream_house"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/grey_bg"
                android:drawableStart="@drawable/search_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/search_your_house_or_location"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33333"
                        android:background="@drawable/stroke_grey_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/light_green_bg"
                            android:cropToPadding="false"
                            android:padding="8dp"
                            app:srcCompat="@drawable/cat_1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:text="House"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="0.33333"
                        android:background="@drawable/stroke_grey_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/light_green_bg"
                            android:cropToPadding="false"
                            android:padding="8dp"
                            app:srcCompat="@drawable/cat_2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:text="Apartment"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33333"
                        android:background="@drawable/stroke_grey_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/light_green_bg"
                            android:cropToPadding="false"
                            android:padding="8dp"
                            app:srcCompat="@drawable/cat_3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:text="Villa"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33333"
                        android:background="@drawable/stroke_grey_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/light_green_bg"
                            android:cropToPadding="false"
                            android:padding="8dp"
                            app:srcCompat="@drawable/cat_4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:text="Bungola"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="0.33333"
                        android:background="@drawable/stroke_grey_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/light_green_bg"
                            android:cropToPadding="false"
                            android:padding="8dp"
                            app:srcCompat="@drawable/cat_5" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:text="Empty land"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33333"
                        android:background="@drawable/stroke_grey_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/light_green_bg"
                            android:cropToPadding="false"
                            android:padding="8dp"
                            app:srcCompat="@drawable/cat_6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:text="Office"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </TableRow>

            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recomendedView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:paddingBottom="48dp"/>

        </LinearLayout>
    </ScrollView>
    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:background="@drawable/white_bg"
        app:cnb_menuResource="@menu/menu_bottom"
        android:id="@+id/navigationBar"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:elevation="4dp"
        android:padding="8dp"
        app:cnb_radius="100dp"
        app:cnb_iconSize="20sp"
        app:cnb_iconColor="@color/green"
        app:cnb_orientationMode="horizontal"
        app:cnb_unselectedColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>